English version switch

--- a/blogs/我的哈巴雪山之旅.md
+++ b/blogs/我的哈巴雪山之旅.md
@@ -11,10 +11,10 @@ tags: out
 2025.10.02
 ### 时间表
 
-09.20 和朋友确定行程并买机票
-09.29 22:00直飞抵达丽江
-09.30 6:00上车前往哈巴村，接着骑骡子到大本营
-10.01 3:00出发，9:30登顶，14:30回到大本营，骑骡子返回哈巴村，坐车返回丽江
+- 09.20 和朋友确定行程并买机票
+- 09.29 22:00直飞抵达丽江
+- 09.30 6:00上车前往哈巴村，接着骑骡子到大本营
+- 10.01 3:00出发，9:30登顶，14:30回到大本营，骑骡子返回哈巴村，坐车返回丽江
 
 ### 行前准备
 
